Fix select all button alignment

--- a/assets/src/app/videos/videos.component.less
+++ b/assets/src/app/videos/videos.component.less
@@ -34,6 +34,11 @@ ul.videos {
     .actions {
       flex: 2;
       text-align: right;
+
+      button {
+        width: 100%;
+        max-width: 250px;
+      }
     }
   }
 
